fix wrapping

--- a/style.css
+++ b/style.css
@@ -132,7 +132,8 @@ p {
 #outputGapTextUnderData {
     font-size: x-large;
     word-wrap: break-word;
-
+    word-break: break-all;
+    white-space: normal;
 }
 
 #under_data {
